# FlexUpdateMc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_TEST.md  test_results_summary.md
bot/: Cargo.toml
bot/src/: main.rs
flex-mc/: Cargo.toml
flex-mc/examples/: parse_regions.rs  run_bot.rs
flex-mc/examples/resource/regions/: r.0.0.mca
flex-mc/src/: infra.rs  lib.rs
flex-mc/src/infra/: bot_spawner.rs  chunk_generator.rs  flax_updater.rs  free_port_finder.rs  region_loader.rs
js/: README.md  package.json
src/: main.rs  model.rs  service.rs  util.rs
src/service/: bot_handler.rs  chunk_migrator.rs  flex_updater.rs  server_executor.rs  server_factory.rs  server_handler.rs  world_handler.rs
src/util/: dir_overwrite.rs
ssmc-core/: .gitignore  Cargo.toml
ssmc-core/examples/: mc_java_loader.rs  vanilla_server_loader.rs
ssmc-core/src/: domain.rs  infra.rs  lib.rs  util.rs
ssmc-core/src/domain/: fs_content.rs
ssmc-core/src/infra/: file_bundle_creator.rs  file_bundle_loader.rs  fs_handler.rs  mc_java.rs  trie_loader.rs  url_fetcher.rs  vanilla.rs  virtual_fs.rs
ssmc-core/src/util/: file_trie.rs  fs_converter.rs
tests/: server_executor_integration_test.rs
